--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/alerts/alerts.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/alerts/alerts.html
@@ -211,19 +211,19 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/manager/manual-email-report/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/manager/manual-email-report/index.html"
           >Configuring email alerts</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/manager/manual-email-report/smtp-authentication.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/manager/manual-email-report/smtp-authentication.html"
           >SMTP server with authentication</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/email-alerts.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/email-alerts.html"
           >Email alerts reference</md-list-item
         >
       </md-list>
@@ -329,13 +329,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/getting-started/use-cases/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/getting-started/use-cases/index.html"
           >Use cases about alerts generation</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/alerts.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/alerts.html"
           >Alerts reference</md-list-item
         >
       </md-list>
@@ -443,13 +443,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/labels.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/labels.html"
           >Agent labels</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/labels.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/labels.html"
           >Labels reference</md-list-item
         >
       </md-list>
@@ -611,13 +611,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/manager/automatic-reports.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/manager/automatic-reports.html"
           >Generating automatic reports</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/reports.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/reports.html"
           >Reports reference</md-list-item
         >
       </md-list>
@@ -741,13 +741,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/manager/manual-syslog-output.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/manager/manual-syslog-output.html"
           >Configuring syslog output</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/syslog-output.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/syslog-output.html"
           >Syslog output reference</md-list-item
         >
       </md-list>
