--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/cis-cat/cis-cat.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/cis-cat/cis-cat.html
@@ -250,13 +250,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/policy-monitoring/ciscat/ciscat.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/policy-monitoring/ciscat/ciscat.html"
           >CIS-CAT integration</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-ciscat.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-ciscat.html"
           >CIS-CAT module reference</md-list-item
         >
       </md-list>
