--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/client-buffer/client-buffer.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/client-buffer/client-buffer.html
@@ -122,13 +122,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/antiflooding.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/antiflooding.html"
           >Anti-flooding mechanism</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/client-buffer.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/client-buffer.html"
           >Client buffer reference</md-list-item
         >
       </md-list>
