--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/cluster/cluster.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/cluster/cluster.html
@@ -132,13 +132,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/configuring-cluster/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/configuring-cluster/index.html"
           >Configuring a Fortishield cluster</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/cluster.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/cluster.html"
           >Fortishield cluster reference</md-list-item
         >
       </md-list>
