--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/database-output/database-output.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/database-output/database-output.html
@@ -97,7 +97,7 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/database-output.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/database-output.html"
           >Database output reference</md-list-item
         >
       </md-list>
