--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/fortishield-commands/fortishield-commands.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/fortishield-commands/fortishield-commands.html
@@ -129,13 +129,13 @@
       <md-list-item
         target="_blank"
         class="wz-text-link"
-        ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/active-response/index.html"
+        ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/active-response/index.html"
         >Active response documentation</md-list-item
       >
       <md-list-item
         target="_blank"
         class="wz-text-link"
-        ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/commands.html"
+        ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/commands.html"
         >Commands reference</md-list-item
       >
     </md-list>
@@ -312,7 +312,7 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-command.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-command.html"
           >Command module reference</md-list-item
         >
       </md-list>
