--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/global-configuration/global-configuration.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/global-configuration/global-configuration.html
@@ -283,13 +283,13 @@
           ng-if="!agent || agent.id === '000'"
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/global.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/global.html"
           >Global reference</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/logging.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/logging.html"
           >Logging reference</md-list-item
         >
       </md-list>
@@ -422,13 +422,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/daemons/fortishield-remoted.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/daemons/fortishield-remoted.html"
           >Remote daemon reference</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/remote.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/remote.html"
           >Remote configuration reference</md-list-item
         >
       </md-list>
