--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/integrations/integrations.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/integrations/integrations.html
@@ -151,19 +151,19 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/manager/manual-integration.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/manager/manual-integration.html"
           >Integration with external APIs</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/virustotal-scan/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/virustotal-scan/index.html"
           >VirusTotal integration</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/integration.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/integration.html"
           >Integration reference</md-list-item
         >
       </md-list>
