--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/log-collection/log-collection.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/log-collection/log-collection.html
@@ -183,13 +183,13 @@
       <md-list-item
         target="_blank"
         class="wz-text-link"
-        ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/log-data-collection/index.html"
+        ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/log-data-collection/index.html"
         >Log data collection</md-list-item
       >
       <md-list-item
         target="_blank"
         class="wz-text-link"
-        ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/localfile.html"
+        ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/localfile.html"
         >Localfile reference</md-list-item
       >
     </md-list>
@@ -338,13 +338,13 @@
       <md-list-item
         target="_blank"
         class="wz-text-link"
-        ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/log-data-collection/index.html"
+        ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/log-data-collection/index.html"
         >Log data collection</md-list-item
       >
       <md-list-item
         target="_blank"
         class="wz-text-link"
-        ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/localfile.html"
+        ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/localfile.html"
         >Localfile reference</md-list-item
       >
     </md-list>
@@ -477,13 +477,13 @@
       <md-list-item
         target="_blank"
         class="wz-text-link"
-        ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/log-data-collection/log-data-configuration.html#using-multiple-outputs">
+        ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/log-data-collection/log-data-configuration.html#using-multiple-outputs">
         Using multiple outputs</md-list-item
       >
       <md-list-item
         target="_blank"
         class="wz-text-link"
-        ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/socket.html"
+        ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/socket.html"
         >Socket reference</md-list-item
       >
     </md-list>
