--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/open-scap/open-scap.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/open-scap/open-scap.html
@@ -224,13 +224,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/policy-monitoring/openscap/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/policy-monitoring/openscap/index.html"
           >OpenSCAP module documentation</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-openscap.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-openscap.html"
           >OpenSCAP module reference</md-list-item
         >
       </md-list>
