--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/osquery/osquery.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/osquery/osquery.html
@@ -172,13 +172,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/osquery.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/osquery.html"
           >Osquery module documentation</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-osquery.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-osquery.html"
           >Osquery module reference</md-list-item
         >
       </md-list>
