--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/policy-monitoring/policy-monitoring.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/policy-monitoring/policy-monitoring.html
@@ -468,19 +468,19 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/anomalies-detection/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/anomalies-detection/index.html"
           >Anomaly and malware detection</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/policy-monitoring/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/policy-monitoring/index.html"
           >Monitoring security policies</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/rootcheck.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/rootcheck.html"
           >Rootcheck reference</md-list-item
         >
       </md-list>
