--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/syscollector/syscollector.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/syscollector/syscollector.html
@@ -166,13 +166,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/syscollector.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/syscollector.html"
           >System inventory</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-syscollector.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-syscollector.html"
           >Syscollector module reference</md-list-item
         >
       </md-list>
