--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/welcome/welcome.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/welcome/welcome.html
@@ -426,19 +426,19 @@
           <md-list-item
             target="_blank"
             class="wz-text-link"
-            ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/manager/index.html"
+            ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/manager/index.html"
             >Fortishield server administration</md-list-item
           >
           <md-list-item
             target="_blank"
             class="wz-text-link"
-            ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/index.html"
+            ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/index.html"
             >Fortishield capabilities</md-list-item
           >
           <md-list-item
             target="_blank"
             class="wz-text-link"
-            ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/index.html"
+            ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/index.html"
             >Local configuration reference</md-list-item
           >
         </md-list>
