--- a/SplunkAppForFortishield/appserver/static/js/directives/wz-svg/wz-svg.html
+++ b/SplunkAppForFortishield/appserver/static/js/directives/wz-svg/wz-svg.html
@@ -536,7 +536,7 @@
   style="padding-left: 10px">
   <a
     class="euiButtonIcon euiButtonIcon--primary"
-    href="https://fortishield.com/community/join-us-on-slack/"
+    href="https://fortishield.github.io/community/join-us-on-slack/"
     target="_blank"
     rel="noopener noreferrer"
     ><svg
