--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/active-response/active-response.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/active-response/active-response.html
@@ -179,13 +179,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/active-response/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/active-response/index.html"
           >Active response documentation</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/active-response.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/active-response.html"
           >Active response reference</md-list-item
         >
       </md-list>
