--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/agentless/agentless.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/agentless/agentless.html
@@ -145,13 +145,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/agentless-monitoring/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/agentless-monitoring/index.html"
           >Agentless monitoring</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/agentless.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/agentless.html"
           >Agentless reference</md-list-item
         >
       </md-list>
