--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/amazon-s3/amazon-s3.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/amazon-s3/amazon-s3.html
@@ -364,13 +364,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/amazon/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/amazon/index.html"
           >Using Fortishield to monitor AWS</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-s3.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-s3.html"
           >Amazon S3 module reference</md-list-item
         >
       </md-list>
