--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/azure-logs/azure-logs.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/azure-logs/azure-logs.html
@@ -203,13 +203,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/azure/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/azure/index.html"
           >Using Fortishield to monitor Microsoft Azure</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-azure-logs.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-azure-logs.html"
           >Azure Logs wodle reference</md-list-item
         >
       </md-list>
