--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/client/client.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/client/client.html
@@ -162,13 +162,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/agents/agent-connection.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/agents/agent-connection.html"
           >Checking connection with manager</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/client.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/client.html"
           >Client reference</md-list-item
         >
       </md-list>
