--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/docker-listener/docker-listener.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/docker-listener/docker-listener.html
@@ -120,13 +120,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/container-security/docker-monitor/monitoring-containers-activity.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/container-security/docker-monitor/monitoring-containers-activity.html"
           >Monitoring containers activity</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-docker.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/wodle-docker.html"
           >Docker listener module reference</md-list-item
         >
       </md-list>
