--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/integrity-monitoring/integrity-monitoring.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/integrity-monitoring/integrity-monitoring.html
@@ -737,7 +737,7 @@
             <i class="fa fa-fw fa-info-circle" aria-hidden="true"></i> No audit
             keys were found. Visit the documentation on
             <a
-              href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/syscheck.html#whodata"
+              href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/syscheck.html#whodata"
               >this link</a
             >
             to enable it.
@@ -956,13 +956,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/capabilities/file-integrity/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/capabilities/file-integrity/index.html"
           >File integrity monitoring</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/syscheck.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/syscheck.html"
           >Syscheck reference</md-list-item
         >
       </md-list>
