--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/registration-service/registration-service.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/configuration/registration-service/registration-service.html
@@ -243,13 +243,13 @@
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/agent-enrollment/index.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/agent-enrollment/index.html"
           >Fortishield agent enrollment</md-list-item
         >
         <md-list-item
           target="_blank"
           class="wz-text-link"
-          ng-href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/reference/ossec-conf/auth.html"
+          ng-href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/reference/ossec-conf/auth.html"
           >Registration service reference</md-list-item
         >
       </md-list>
