--- a/SplunkAppForFortishield/appserver/static/js/controllers/management/monitoring/monitoring.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/management/monitoring/monitoring.html
@@ -59,7 +59,7 @@
             The cluster is disabled. Visit the documentation on
             <a
               target="_blank"
-              href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/configuring-cluster/index.html"
+              href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/configuring-cluster/index.html"
               >this link</a
             >
             to learn about how to enable it.
