--- a/SplunkAppForFortishield/appserver/static/js/controllers/security/roles-mapping/rolesMapping.html
+++ b/SplunkAppForFortishield/appserver/static/js/controllers/security/roles-mapping/rolesMapping.html
@@ -77,7 +77,7 @@
                   <span class="tSize20">
                     Mapping rules: Assign roles to users who match these rules.
                     <a
-                      href="https://documentation.fortishield.com/{{appDocuVersion}}/user-manual/api/rbac/auth-context.html"
+                      href="https://fortishield.github.io/documentation/{{appDocuVersion}}/user-manual/api/rbac/auth-context.html"
                       target="_blank"
                       rel="noopener noreferrer">
                       Learn more
